--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -931,12 +931,12 @@
     "y = application_df_encoded.IS_SUCCESSFUL\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "X_train, y_train, X_test, y_test = train_test_split(X, y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,11 +944,11 @@
     "scaler = StandardScaler()\n",
     "\n",
     "# Fit the StandardScaler\n",
-    "X_scaler = scaler.fit(X_train.values.reshape(-1,1))\n",
+    "X_scaler = scaler.fit(X_train)\n",
     "\n",
     "# Scale the data\n",
-    "X_train_scaled = X_scaler.transform(X_train.values.reshape(-1,1))\n",
-    "X_test_scaled = X_scaler.transform(X_test.values.reshape(-1,1))"
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -960,25 +960,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 80)                3520      \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 30)                2430      \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 31        \n",
+      " dense_9 (Dense)             (None, 5)                 220       \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 4)                 24        \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 1)                 5         \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,981\n",
-      "Trainable params: 5,981\n",
+      "Total params: 249\n",
+      "Trainable params: 249\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -986,18 +987,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train.iloc[0])\n",
+    "hidden_nodes_layer1 =  5\n",
+    "hidden_nodes_layer2 = 4\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -1005,29 +1008,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "804/804 [==============================] - 12s 14ms/step - loss: 0.6320 - accuracy: 0.6663\n",
+      "Epoch 2/100\n",
+      "804/804 [==============================] - 9s 11ms/step - loss: 0.5785 - accuracy: 0.7234\n",
+      "Epoch 3/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5711 - accuracy: 0.7255\n",
+      "Epoch 4/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5681 - accuracy: 0.7255\n",
+      "Epoch 5/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5655 - accuracy: 0.7262\n",
+      "Epoch 6/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5638 - accuracy: 0.7256\n",
+      "Epoch 7/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5613 - accuracy: 0.7250\n",
+      "Epoch 8/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5606 - accuracy: 0.7272\n",
+      "Epoch 9/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5601 - accuracy: 0.7277\n",
+      "Epoch 10/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5593 - accuracy: 0.7278\n",
+      "Epoch 11/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5591 - accuracy: 0.7275\n",
+      "Epoch 12/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5586 - accuracy: 0.7288\n",
+      "Epoch 13/100\n",
+      "804/804 [==============================] - 9s 11ms/step - loss: 0.5584 - accuracy: 0.7276\n",
+      "Epoch 14/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5582 - accuracy: 0.7284\n",
+      "Epoch 15/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5578 - accuracy: 0.7282\n",
+      "Epoch 16/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5572 - accuracy: 0.7290\n",
+      "Epoch 17/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5568 - accuracy: 0.7288\n",
+      "Epoch 18/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5563 - accuracy: 0.7282\n",
+      "Epoch 19/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5561 - accuracy: 0.7294\n",
+      "Epoch 20/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5559 - accuracy: 0.7289\n",
+      "Epoch 21/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5556 - accuracy: 0.7287\n",
+      "Epoch 22/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5553 - accuracy: 0.7301\n",
+      "Epoch 23/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5552 - accuracy: 0.7296\n",
+      "Epoch 24/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5547 - accuracy: 0.7296\n",
+      "Epoch 25/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5548 - accuracy: 0.7290\n",
+      "Epoch 26/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5545 - accuracy: 0.7300\n",
+      "Epoch 27/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5544 - accuracy: 0.7301\n",
+      "Epoch 28/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5543 - accuracy: 0.7302\n",
+      "Epoch 29/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5543 - accuracy: 0.7298\n",
+      "Epoch 30/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5539 - accuracy: 0.7304\n",
+      "Epoch 31/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5540 - accuracy: 0.7296\n",
+      "Epoch 32/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5534 - accuracy: 0.7288\n",
+      "Epoch 33/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5539 - accuracy: 0.7300\n",
+      "Epoch 34/100\n",
+      "804/804 [==============================] - 24s 30ms/step - loss: 0.5534 - accuracy: 0.7298\n",
+      "Epoch 35/100\n",
+      "804/804 [==============================] - 10s 13ms/step - loss: 0.5536 - accuracy: 0.7304\n",
+      "Epoch 36/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5538 - accuracy: 0.7295\n",
+      "Epoch 37/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5535 - accuracy: 0.7300\n",
+      "Epoch 38/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5534 - accuracy: 0.7300\n",
+      "Epoch 39/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5533 - accuracy: 0.7299\n",
+      "Epoch 40/100\n",
+      "804/804 [==============================] - 11s 14ms/step - loss: 0.5534 - accuracy: 0.7294\n",
+      "Epoch 41/100\n",
+      "804/804 [==============================] - 18s 22ms/step - loss: 0.5532 - accuracy: 0.7294\n",
+      "Epoch 42/100\n",
+      "804/804 [==============================] - 15s 19ms/step - loss: 0.5530 - accuracy: 0.7301\n",
+      "Epoch 43/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5531 - accuracy: 0.7297\n",
+      "Epoch 44/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5528 - accuracy: 0.7299\n",
+      "Epoch 45/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5530 - accuracy: 0.7297\n",
+      "Epoch 46/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5526 - accuracy: 0.7302\n",
+      "Epoch 47/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5528 - accuracy: 0.7292\n",
+      "Epoch 48/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5525 - accuracy: 0.7299\n",
+      "Epoch 49/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5525 - accuracy: 0.7299\n",
+      "Epoch 50/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5524 - accuracy: 0.7301\n",
+      "Epoch 51/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5523 - accuracy: 0.7303\n",
+      "Epoch 52/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5519 - accuracy: 0.7296\n",
+      "Epoch 53/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5522 - accuracy: 0.7296\n",
+      "Epoch 54/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5521 - accuracy: 0.7301\n",
+      "Epoch 55/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5521 - accuracy: 0.7299\n",
+      "Epoch 56/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5519 - accuracy: 0.7298\n",
+      "Epoch 57/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5518 - accuracy: 0.7293\n",
+      "Epoch 58/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5517 - accuracy: 0.7286\n",
+      "Epoch 59/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5517 - accuracy: 0.7297\n",
+      "Epoch 60/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5517 - accuracy: 0.7287\n",
+      "Epoch 61/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5514 - accuracy: 0.7301\n",
+      "Epoch 62/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5516 - accuracy: 0.7290\n",
+      "Epoch 63/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5515 - accuracy: 0.7302\n",
+      "Epoch 64/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5514 - accuracy: 0.7294\n",
+      "Epoch 65/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5511 - accuracy: 0.7301\n",
+      "Epoch 66/100\n",
+      "804/804 [==============================] - 8s 9ms/step - loss: 0.5515 - accuracy: 0.7299\n",
+      "Epoch 67/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5511 - accuracy: 0.7301\n",
+      "Epoch 68/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5510 - accuracy: 0.7311\n",
+      "Epoch 69/100\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5510 - accuracy: 0.7299\n",
+      "Epoch 70/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5509 - accuracy: 0.7304\n",
+      "Epoch 71/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5510 - accuracy: 0.7304\n",
+      "Epoch 72/100\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5510 - accuracy: 0.7313\n",
+      "Epoch 73/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5507 - accuracy: 0.7308\n",
+      "Epoch 74/100\n",
+      "804/804 [==============================] - 8s 11ms/step - loss: 0.5511 - accuracy: 0.7305\n",
+      "Epoch 75/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5509 - accuracy: 0.7308\n",
+      "Epoch 76/100\n",
+      "804/804 [==============================] - 25s 32ms/step - loss: 0.5509 - accuracy: 0.7304\n",
+      "Epoch 77/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5505 - accuracy: 0.7310\n",
+      "Epoch 78/100\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5507 - accuracy: 0.7318\n",
+      "Epoch 79/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5508 - accuracy: 0.7314\n",
+      "Epoch 80/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5507 - accuracy: 0.7312\n",
+      "Epoch 81/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5506 - accuracy: 0.7309\n",
+      "Epoch 82/100\n",
+      "804/804 [==============================] - 11s 14ms/step - loss: 0.5504 - accuracy: 0.7307\n",
+      "Epoch 83/100\n",
+      "804/804 [==============================] - 10s 13ms/step - loss: 0.5507 - accuracy: 0.7319\n",
+      "Epoch 84/100\n",
+      "804/804 [==============================] - 10s 13ms/step - loss: 0.5506 - accuracy: 0.7300\n",
+      "Epoch 85/100\n",
+      "804/804 [==============================] - 9s 11ms/step - loss: 0.5506 - accuracy: 0.7308\n",
+      "Epoch 86/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5505 - accuracy: 0.7314\n",
+      "Epoch 87/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5506 - accuracy: 0.7314\n",
+      "Epoch 88/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5506 - accuracy: 0.7319\n",
+      "Epoch 89/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5504 - accuracy: 0.7311\n",
+      "Epoch 90/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5506 - accuracy: 0.7299\n",
+      "Epoch 91/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5504 - accuracy: 0.7315\n",
+      "Epoch 92/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5503 - accuracy: 0.7315\n",
+      "Epoch 93/100\n",
+      "804/804 [==============================] - 9s 11ms/step - loss: 0.5504 - accuracy: 0.7318\n",
+      "Epoch 94/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5503 - accuracy: 0.7311\n",
+      "Epoch 95/100\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.5504 - accuracy: 0.7304\n",
+      "Epoch 96/100\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.5504 - accuracy: 0.7316\n",
+      "Epoch 97/100\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5505 - accuracy: 0.7309\n",
+      "Epoch 98/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5499 - accuracy: 0.7316\n",
+      "Epoch 99/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5503 - accuracy: 0.7316\n",
+      "Epoch 100/100\n",
+      "804/804 [==============================] - 7s 9ms/step - loss: 0.5503 - accuracy: 0.7306\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "mc = tf.keras.callbacks.ModelCheckpoint('AlphabetSoupCharity.h5', save_weights_only=True, save_freq=5)\n",
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=100, callbacks=[mc])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 1s - loss: 0.5537 - accuracy: 0.7319 - 536ms/epoch - 2ms/step\n",
+      "Loss: 0.5537071228027344, Accuracy: 0.7318950295448303\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model using the test data\n",
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
